fix circleci config yml format

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ workflows:
       - test:
           requires:
             - build
-      - coverage
+      - coverage:
           requires:
             - checkout_and_install
       
