change coverage dependency to build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,5 +77,5 @@ workflows:
             - build
       - coverage:
           requires:
-            - checkout_and_install
+            - build
       
