add solhint to package.json

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "eslint-plugin-react": "^7.17.0",
         "ganache-core": "^2.6.1",
         "mocha": "^6.2.0",
+        "solhint": "^2.3.0",
         "solidity-coverage": "^0.6.7",
         "standard": "^14.0.2",
         "truffle": "^5.0.41",
