--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
           command: truffle compile
       - run:
           name: Slither
-          command: slither . --filter-paths test --exclude=naming-convention,unused-state,solc-version,reentrancy-events
+          command: slither . --filter-paths test --exclude-informational --exclude=naming-convention,unused-state,solc-version,reentrancy-events
 
 workflows:
   version: 2
